# Crack-Any-Codebase-with-AI

./: .gitignore  README.md  pyproject.toml
ch02-chat/: README.md  dump.py
ch02-chat/examples/: nanochat-codebase.md
ch02-chat/prompts/: follow-up.md  learning-note-skeleton.md  numbers-not-adjectives.md  quiz-me.md  story-not-category.md  toy-example.md
ch03-workflow/: README.md
ch03-workflow/instructions/: architecture-review.md  beginner-tutorial.md  onboarding-guide.md  security-audit.md
ch03-workflow/output/express-tour/: 01_app.html  01_app.md  02_req.html  02_req.md  03_res.html  03_res.md  04_middleware.html  04_middleware.md  05_router.html  05_router.md  06_route.html  (+5 more)
ch03-workflow/prompts/: analyze-relationships.md  identify-abstractions.md  select-files.md  write-chapter.md
ch03-workflow/skill/: CODEBASE-TOUR.md
ch03-workflow/workflow/: flow.py  main.py  nodes.py  requirements.txt
ch04-agent/: README.md
ch04-agent/codebase-skill/: .cursorrules.template  CLAUDE.md.template
ch04-agent/domain-skill/: AGENTS.md.template
ch04-agent/experiments/: build-and-run.md  flow-trace.md  understanding-test.md
ch05-product-intent/: README.md
ch05-product-intent/output/: nanochat-story.html  nanochat-story.md
ch05-product-intent/prompts/: competitive-positioning.md  pain-illustration.md  pain-scene.md  surprises-and-absences.md  variant-sentence.md
ch05-product-intent/skill/: PRODUCT-STORY.md
ch05-product-intent/workflow/: flow.py  main.py  nodes.py  render.py  requirements.txt
utils/: __init__.py  call_llm.py  crawl.py  requirements.txt
(+60 files in other folders)
