[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crack-any-codebase-with-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pocketflow>=0.0.1",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
google = ["google-genai>=0.3.0"]
